# ysyx

./: Makefile
abstract-machine/am/include/: am.h  amdev.h
abstract-machine/am/include/arch/: mips32-nemu.h  riscv32-nemu.h  riscv64-nemu.h  riscv64-npc.h  x86-qemu.h  x86_64-qemu.h
abstract-machine/am/src/mips/: mips32.h
abstract-machine/am/src/mips/nemu/: cte.c
abstract-machine/am/src/native/: cte.c  ioe.c  mpe.c  platform.c  platform.h  trm.c  vme.c
abstract-machine/am/src/native/ioe/: audio.c  disk.c  gpu.c  input.c
abstract-machine/am/src/platform/dummy/: ioe.c
abstract-machine/am/src/platform/nemu/: mpe.c  trm.c
abstract-machine/am/src/platform/nemu/ioe/: audio.c  (+5 more)
abstract-machine/am/src/riscv/: riscv.h
abstract-machine/am/src/riscv/nemu/: cte.c  vme.c
abstract-machine/am/src/riscv/npc/: cte.c  input.c  ioe.c  trm.c
abstract-machine/am/src/riscv/spike/: atomic.h  htif.c  htif.h  ioe.c  timer.c  trm.c
abstract-machine/am/src/x86/: x86.h
abstract-machine/am/src/x86/nemu/: cte.c  vme.c
abstract-machine/am/src/x86/qemu/: cte.c  ioe.c  mpe.c  trm.c  vme.c  x86-qemu.h
abstract-machine/klib/include/: klib-macros.h  klib.h
abstract-machine/klib/src/: cpp.c  int64.c  stdio.c  stdlib.c  string.c
abstract-machine/scripts/: riscv64-npc.mk
abstract-machine/scripts/platform/: nemu.mk
nemu/: Kconfig  Makefile
nemu/include/: common.h  debug.h  difftest-def.h  isa.h  macro.h  utils.h
nemu/include/cpu/: cpu.h  decode.h  difftest.h  ifetch.h
nemu/include/device/: map.h
nemu/include/memory/: host.h  paddr.h  vaddr.h
nemu/resource/sdcard/: nemu.c
nemu/src/: nemu-main.c
nemu/src/cpu/: cpu-exec.c
nemu/src/cpu/difftest/: dut.c  ref.c
nemu/src/device/: alarm.c  audio.c  device.c  disk.c  intr.c  keyboard.c  mmc.h  sdcard.c  serial.c  timer.c  vga.c
nemu/src/device/io/: map.c  mmio.c  port-io.c
nemu/src/engine/interpreter/: hostcall.c  init.c
nemu/src/isa/riscv32/: init.c  inst.c  logo.c  reg.c
nemu/src/isa/riscv32/difftest/: dut.c
nemu/src/isa/riscv32/include/: isa-def.h
nemu/src/isa/riscv32/local-include/: reg.h
nemu/src/isa/riscv32/system/: intr.c  mmu.c
nemu/src/isa/riscv64/: init.c  inst.c  logo.c  reg.c
nemu/src/isa/riscv64/difftest/: dut.c
nemu/src/isa/riscv64/include/: isa-def.h
nemu/src/isa/riscv64/local-include/: reg.h
nemu/src/isa/riscv64/system/: mmu.c
nemu/src/memory/: paddr.c  vaddr.c
nemu/src/monitor/: monitor.c
nemu/src/monitor/sdb/: expr.c  sdb.c  sdb.h  watchpoint.c
nemu/src/utils/: disasm.cc  filelist.mk  ftrace.c  log.c  rand.c  state.c  timer.c
nemu/tools/fixdep/: fixdep.c
nemu/tools/gen-expr/: gen-expr.c
nemu/tools/kconfig/: conf.c  confdata.c  expr.c  expr.h  list.h  lkc.h  lkc_proto.h  mconf.c  menu.c  preprocess.c  symbol.c  util.c
nemu/tools/kconfig/lxdialog/: checklist.c  dialog.h  inputbox.c  menubox.c  textbox.c  util.c  yesno.c
nemu/tools/kvm-diff/src/: kvm.c
nemu/tools/qemu-diff/include/: isa.h
nemu/tools/qemu-diff/src/: diff-test.c  gdb-host.c  isa.c  protocol.c
npc/: .gitignore  CMakeLists.txt  Makefile
npc-riscv64/: .gitignore  CMakeLists.txt  Makefile  Makefile_obj
npc-riscv64/csrc/: difftest.cc  disasm.cc  dpifunc.cc  expr.cc  ftrace.cc  main.cc  mem.cc  monitor.cc  reg.cc  sdb.cc  watchpoint.cc
npc-riscv64/include/: defs.h  difftest.h  dpifunc.h  infrastructure.h  mem.h
npc-riscv64/logs/annotated/: ps2_keyboard.v  top.v  vga_ctrl.v
npc-riscv64/vsrc/: ALU.v  CTRL.v  DMEM.v  EXU.v  GPR.v  IDU.v  IFU.v  MUXKEY.v  PC.v  REG.v  RF.v  top.v
npc/csrc/: main.cc  main.cpp
npc/logs/annotated/: led.v  ps2_keyboard.v  seg.v  top.v  vga_ctrl.v
npc/obj_dir/: Vour.h  Vour.mk  Vour__ALL.cpp  Vour__Syms.h  Vour__Trace__0.cpp  Vour_classes.mk
npc/vsrc/: alu.v  binary_counter.v  decoder.v  decoder2-4.v  decoder24.v  encoder.v  led.v  lookup.v  multiselector-template.v  multiselector.v  our.v  ps2_keyboard.v  register.v  seg.v  shift_register.v  state_machine.v  timer.v  top.v  vga_ctrl.v
(+2 files in other folders)
